# ReCiSt

./: Cargo.toml  Dockerfile  README.md  RECIST_VIBE_CODING_CONTEXT_PROMPT.md
.sisyphus/: ralph-loop.local.md
examples/: selfhealingpolicy.yaml
helm/recist/: Chart.yaml  values.yaml
helm/recist/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crds.yaml  deployment.yaml  serviceaccount.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/agents/: containment.rs  diagnosis.rs  knowledge.rs  mod.rs  traits.rs
src/agents/metacognitive/: micro_agent.rs  mod.rs
src/clients/: loki.rs  mod.rs  prometheus.rs  qdrant.rs  redis.rs
src/clients/llm/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  traits.rs
src/controller/: mod.rs  reconciler.rs
src/crd/: healing_event.rs  mod.rs  self_healing_policy.rs
src/eventbus/: mod.rs
src/models/: diagnosis.rs  events.rs  fault.rs  knowledge.rs  mod.rs  solution.rs  state.rs
