[package]
name = "recist"
version = "0.1.0"
edition = "2021"
authors = ["ReCiSt Team"]
description = "Bio-inspired Agentic Self-healing Framework for Kubernetes"
license = "Apache-2.0"
repository = "https://github.com/recist/recist"
keywords = ["kubernetes", "self-healing", "operator", "llm", "observability"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = { version = "1.35", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
qdrant-client = "1.7"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
schemars = "0.8"
prometheus-http-query = "0.8"
url = "2.5"
base64 = "0.21"
regex = "1.10"
backoff = { version = "0.4", features = ["tokio"] }
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.9"
rstest = "0.18"

[[bin]]
name = "recist"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
